# tools

./: .gitignore  README.md
EventAICreator/: EventAI Creator.sln
EventAICreator/EventAI Creator/: EventAI Creator.csproj  EventAI Creator.sln  EventAI Creator_TemporaryKey.pfx  Program.cs  Settings.cs  app.config  packages.config  test.xml
EventAICreator/EventAI Creator/GUI/Creature_scripts/: DbScriptControl.Designer.cs  DbScriptControl.cs  EventControl.Designer.cs  EventControl.cs  EventFlag.Designer.cs  EventFlag.cs  EventFlag.resx  NPCEditor.Designer.cs  NPCEditor.cs  NPCEditor.resx  NewCreatureDialog.Designer.cs  NewCreatureDialog.cs
EventAICreator/EventAI Creator/GUI/Creature_summons/: SummonsEditor.Designer.cs  SummonsEditor.cs  SummonsEditor.resx
EventAICreator/EventAI Creator/GUI/Creature_texts/: TEXTEditor.Designer.cs  TEXTEditor.cs  TEXTEditor.resx
EventAICreator/EventAI Creator/GUI/General/: ControlPanel.Designer.cs  ControlPanel.cs  Hauptfenster.Designer.cs  Hauptfenster.cs  Hauptfenster.resx  ScriptDisplay.Designer.cs  ScriptDisplay.cs  ScriptDisplay.resx  startupOptions.Designer.cs  startupOptions.cs  startupOptions.resx
EventAICreator/EventAI Creator/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
EventAICreator/EventAI Creator/Properties/DataSources/: Info.datasource  creatures.datasource  test.datasource
EventAICreator/EventAI Creator/Stores/: Datastores.cs  creature.cs  db_script.cs  info.cs  localized_texts.cs  summons.cs  validation.cs
MaNGOSPatcher/: MaNGOSPatcher.sln  README
MaNGOSPatcher/Patcher/: CrashReporter.cs  Form1.Designer.cs  Form1.cs  Form1.resx  MaNGOSPatcher.csproj  Patches.cs  Program.cs
MaNGOSPatcher/Patcher/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
MaNGOSPatcher/_extras/: Wow.exe.patch
mangos_db_editor/: .anjuta_sym_db.db  Makefile.am  Makefile.in  README  configure  configure.ac
mangos_db_editor/.anjuta/: default.profile
mangos_db_editor/.anjuta/session/: anjuta.session  dock-layout.xml
mangos_db_editor/src/: Makefile.am  Makefile.in  main.c  mangos_db_editor.c  mangos_db_editor.h  mangos_db_editor.ui
